--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    border: 1px solid;  
+    /* border: 1px solid;  */ 
     border-color: red;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 
@@ -40,10 +40,10 @@
     align-items: center;
     border: 3px solid gray;
     border-radius: 10px;
-    transition: all 1s ease;
+    transition: all 0.4s ease;
 }
 
-.win,.lose{
+.win,.lose,.draw{
     transform: scale(1.1);
 }
 
