--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    /* border: 1px solid;  */ 
+ /*     border: 1px solid;  */  
     border-color: red;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 
@@ -17,6 +17,7 @@
 
 .result_container{
     padding: 25px 0;
+    justify-content: space-around;
 }
 .title,.option,.player,.computer{
     width: 1000px;
@@ -49,10 +50,12 @@
 
 .win{
     border-color: green;
+    background-color: green;
 }
 
 .lose{
     border-color: red;
+    background-color: red;
 }
 
 
